--- a/2Market_project.html
+++ b/2Market_project.html
@@ -193,24 +193,24 @@
         <div class="collapse navbar-collapse order-1 order-lg-0" id="navbarNav">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link" href="homepage.html#about">About Me</a>
+              <a class="nav-link" href="index.html#about">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="homepage.html#skills">Tech Skills</a>
+              <a class="nav-link" href="index.html#skills">Tech Skills</a>
             </li>
           </ul>
         </div>
         
         <!-- Centered Brand/Logo -->
-        <a class="navbar-brand mx-auto order-0 order-lg-1" href="homepage.html">Sujith Kumaar</a>
+        <a class="navbar-brand mx-auto order-0 order-lg-1" href="index.html">Sujith Kumaar</a>
         
         <!-- Navigation Links (right side) -->
         <div class="collapse navbar-collapse order-2" id="navbarNav2">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle active" href="homepage.html#projects" id="projectsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Projects</a>
+              <a class="nav-link dropdown-toggle active" href="index.html#projects" id="projectsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Projects</a>
               <ul class="dropdown-menu" aria-labelledby="projectsDropdown">
-                <li><a class="dropdown-item" href="homepage.html#projects">All Projects</a></li>
+                <li><a class="dropdown-item" href="index.html#projects">All Projects</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="turtle_games_project.html">Turtle Games</a></li>
                 <li><a class="dropdown-item" href="nhs_project.html">NHS UK</a></li>
@@ -236,8 +236,8 @@
       <h1 class="project-title">2Market : Consumer-Analytics</h1>
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="homepage.html">Home</a></li>
-          <li class="breadcrumb-item"><a href="homepage.html#projects">Projects</a></li>
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item"><a href="index.html#projects">Projects</a></li>
           <li class="breadcrumb-item active" aria-current="page">2Market Consumer Analytics</li>
         </ol>
       </nav>
