--- a/index.html
+++ b/index.html
@@ -690,7 +690,6 @@
 
 
  <!-- Vantage Project -->
- <!-- 
     <div class="col-lg-4 col-md-6">
       <div class="card project-card shadow-sm">
         <div class="project-image project-color-4">
@@ -704,10 +703,10 @@
             </div>
             <div class="project-overlay">
                 <h4>Vantage Data</h4>
-                <p class="mb-0">Quantitative Strategy</p>
+                <p class="mb-0">Quantitative Financial Analytics</p>
                 <div class="project-stats">
                     <span>6 Weeks</span>
-                    <span></span>
+                    <span>80% (Distinction)</span>
                 </div>
             </div>
         </div>
@@ -717,14 +716,14 @@
                 <span class="tech-tag">Python</span>
                 <span class="tech-tag">Financial APIs</span>
                 <span class="tech-tag">FinBERT</span>
-                <span class="tech-tag">Research</span>
+                <span class="tech-tag">Quant Research</span>
             </div>
             <div class="divider"></div>
             <a href="vantage_project.html" class="btn btn-sm btn-outline-primary w-100">Explore Project</a>
         </div>
       </div>
     </div>
--->
+
 <!-- Placeholder for future projects -->
 <div class="col-lg-4 col-md-6">
     <div class="card project-card shadow-sm">
