--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                         <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#bioDetails" aria-expanded="false" aria-controls="bioDetails">
                             More About Me <i class="fas fa-chevron-down ms-1"></i>
                         </button>
-                        <a href="assets/docs/Sujith_Kumaar_CV.pdf" class="btn btn-outline-success" target="_blank" download>Get My CV</a>
+                        <a href="assets/docs/Sujith_Kumaar_CV.pdf" class="btn btn-outline-success" target="_blank">Get My CV</a>
                     </div>
                 </div>
             </div>
