--- a/index.html
+++ b/index.html
@@ -307,6 +307,13 @@
         }
 
     </style>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SSC2LHEJY9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-SSC2LHEJY9');
+    </script>
 </head>
 <body>
     <!-- Navigation -->
