--- a/turtle_games_project.html
+++ b/turtle_games_project.html
@@ -176,6 +176,15 @@
       color: white !important;
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SSC2LHEJY9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SSC2LHEJY9');
+</script>
 </head>
 
 <body>
