--- a/index.html
+++ b/index.html
@@ -305,7 +305,19 @@
             opacity: 1;
             color: white;
         }
+        
+        .custom-contact-btn {
+            color: #164e63;
+            background-color: transparent;
+            border: 1px solid #164e63;
+            transition: all 0.3s ease;
+        }
 
+        .custom-contact-btn:hover {
+            color: white;
+            background: linear-gradient(to right, #1e3a8a, #164e63);
+            border-color: transparent;
+        }
     </style>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SSC2LHEJY9"></script>
     <script>
@@ -411,6 +423,9 @@
                             More About Me <i class="fas fa-chevron-down ms-1"></i>
                         </button>
                         <a href="assets/docs/Sujith_Kumaar_CV.pdf" class="btn btn-outline-success" target="_blank">Get My CV</a>
+                        <a href="mailto:sujithkumaar.kc@gmail.com" class="btn custom-contact-btn">
+                            Contact Me <i class="fas fa-envelope ms-1"></i>
+                        </a>
                     </div>
                 </div>
             </div>
