--- a/index.html
+++ b/index.html
@@ -850,9 +850,9 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body text-center">
-                <img src="assets/img/logos/lse-logo.png" alt="LSE Certification" class="img-fluid mb-4" style="max-height: 150px;">
+                <img src="assets/img/certifications/lse.png" alt="LSE Certification" class="img-fluid mb-4" style="max-height: 750px;">
                 <div class="px-4 text-start">
-                    <p>Completed the LSE Data Analytics Career Accelerator program, an intensive, hands-on data analytics program from London School of Economics, covering comprehensive aspects of business data analytics - from foundational SQL, Excel to advanced predictive modeling with Python.</p>
+                    <p>Completed the LSE <b>Data Analytics Career Accelerator<b> program, an intensive, hands-on data analytics program from London School of Economics, covering comprehensive aspects of business data analytics - from foundational SQL, Excel to advanced predictive modeling with Python.</p>
                 </div>
             </div>
         </div>
